<resources>
    <string name="app_name">CCTV Port Scanner</string>

    <string name="hint_search_view">google.com/10.0.0.1</string>
    <string name="ping">PING:</string>
    <string name="unchecked">Unchecked</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="re_ping_button">Re-ping button</string>
    <string name="check">Check</string>
    <string name="hint_port">Custom ports(80, 100–200)</string>
    <string name="enter_custom_ports">Enter custom ports (80, 100–200)</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="host">Host: %s</string>
    <string name="key_suggestions_list">key_suggestions_list</string>
    <string name="key_first_start">key_first_start</string>
    <string name="key_is_default_data_added">isFirstTime</string>
    <string name="msg_no_host_selected">Please enter host to scan</string>
    <string name="scan_in_progress_msg">Scan in progress. Please wait.</string>
    <string name="title">Title</string>
    <string name="add_btn">Add Button</string>
    <string name="edit_btn">Edit button</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="add_button">Add Button</string>
    <string name="wrong_parameters">Wrong parameters</string>
    <string name="delete">Delete</string>
    <string name="last_used_host">last_used_host</string>
    <string name="last_used_ports">last_used_ports</string>
    <string name="no_connection">No internet connection</string>
    <string name="admob_app_id">ca-app-pub-2377201727291572~9707557002</string>
    <string name="top_banner_unit_id">ca-app-pub-2377201727291572/2184290202</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="pp_url">http://alexandroid.net/about-alexey-korolev/cctv-port-scanner-privacy-policy/</string>
</resources>
